@@ -6,7 +6,7 @@ Name:		globus-ftp-control
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	8.4
+Version:	8.5
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - GridFTP Control Library
@@ -176,6 +176,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Fri Jul 13 2018 Globus Toolkit <support@globus.org> - 8.5-1
+- force encryption on tls control channel
+
 * Fri Jun 22 2018 Globus Toolkit <support@globus.org> - 8.4-1
 - check for missing signing policy req flag
 
