@@ -1,3 +1,9 @@
+globus-gridftp-server-control (6.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * force encryption on tls control channel
+
+ -- Globus Toolkit <support@globus.org>  Fri, 13 Jul 2018 16:06:38 -0500
+
 globus-gridftp-server-control (6.2-1+gt6.@distro@) @distro@; urgency=low
 
   * prevent client from requesting clear control channel
