@@ -1,3 +1,9 @@
+globus-ftp-control (8.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * force encryption on tls control channel
+
+ -- Globus Toolkit <support@globus.org>  Fri, 13 Jul 2018 16:06:59 -0500
+
 globus-ftp-control (8.4-1+gt6.@distro@) @distro@; urgency=low
 
   * check for missing signing policy req flag
